# ts-rust-monorepo

./: .dockerignore  .gitignore  .npmrc  Cargo.toml  README.md  docker-compose.ci.yml  docker-compose.deploy.yml  docker-compose.override.yml  docker-compose.yml  fetch.js  package.json  pnpm-lock.yaml
.changeset/: cold-ligers-press.md  early-chefs-shout.md  eighty-weeks-kneel.md  metal-apricots-wash.md  plenty-timers-hear.md  ten-tigers-raise.md  wild-falcons-look.md
.github/: pull_request_template.md
.github/workflows/: deploy.yml  pr-test.yml  release.yml
dev/: Dockerfile.node  Dockerfile.rust  init-env.sh
scripts/: get-packages-with-images.js
services/rust-axum-api/: Cargo.toml
services/rust-axum-api/src/: main.rs
services/ts-fastify-api/: CHANGELOG.md  Dockerfile  jest.int.config.js  package.json  tsconfig.json
services/ts-fastify-api/scripts/: docker-run.sh  int-test-watch.sh
services/ts-fastify-api/src/: models.ts  server.ts
services/ts-fastify-api/src/api/: add.int.spec.ts  add.ts  divide.int.spec.ts  divide.ts  index.ts  multiply.int.spec.ts  multiply.ts  subtract.int.spec.ts  subtract.ts
services/ts-random-word-api/: .env.example  .eslintrc.js  CHANGELOG.md  Dockerfile  nodemon.json  package.json  tsconfig.json
services/ts-random-word-api/src/: index.ts  models.ts  server.ts
services/ts-random-word-api/src/v1/: index.ts  word.int.spec.ts  word.ts
