[package]
name = "rust-axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
chrono = "0.4"
axum = "0.6.20"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

rust_math = { path = "../../packages/rust-math" }
